changed colors and styling

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Dawning+of+a+New+Day&family=Montserrat:wght@200&display=swap"
     rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gaegu:wght@300&display=swap" rel="stylesheet">
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -41,8 +44,15 @@
       margin: 0;
       overflow-x: hidden;
     }
-    
+
+
+    .scroll::-webkit-scrollbar {
+      width: 1px;
+      background-color: #282623;
+    }
+
   </style>
+
   <title>React App</title>
 </head>
 
